add color to status ui

--- a/scada/static/style.css
+++ b/scada/static/style.css
@@ -24,6 +24,12 @@ button {
     color: #000;
     cursor: pointer;
 }
+.status-off {
+      color: red;
+    }
+.status-on {
+      color: green;
+    }
 .error {
     color: red;
 }
