fix: method of solving challenge by sending SIGSTOP malware

--- a/scada/templates/index.html
+++ b/scada/templates/index.html
@@ -7,6 +7,7 @@
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 </head>
 <body>
+    <!-- Created by Daniel Aunan - https://linkedin.com/in/daniel-aunan -->
 <div class="container">
     <h1>EUROBAY AIRPORT RUNWAY LIGHTING</h1>
     <table>
